RouteLogic-v4.0.0/force-app/main/default/objects/AI_Processing_Config__mdt/AI_Processing_Config__mdt.object-meta.xml
<CustomObject>
    <description>Configuration settings for AI processing system</description>
    <label>AI Processing Configuration</label>
    <pluralLabel>AI Processing Configurations</pluralLabel>
</CustomObject>