RouteLogic-v4.0.0/force-app/main/default/objects/AI_Processing_Config__mdt/fields/Audit_Log_Retention_Days__c.field-meta.xml
<CustomField>
    <fullName>Audit_Log_Retention_Days__c</fullName>
    <defaultValue>365</defaultValue>
    <description>Number of days to retain audit logs before archival and deletion</description>
    <label>Audit Log Retention Days</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>