RouteLogic-v4.0.0/force-app/main/default/objects/AI_Processing_Config__mdt/fields/Callout_Timeout_Ms__c.field-meta.xml
<CustomField>
    <fullName>Callout_Timeout_Ms__c</fullName>
    <defaultValue>30000</defaultValue>
    <description>Callout timeout in milliseconds</description>
    <label>Callout Timeout (ms)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>