RouteLogic-v4.0.0/force-app/main/default/objects/AI_Processing_Config__mdt/fields/Compression_Threshold_Bytes__c.field-meta.xml
<CustomField>
    <fullName>Compression_Threshold_Bytes__c</fullName>
    <defaultValue>5120</defaultValue>
    <description>Minimum request size in bytes to enable compression</description>
    <label>Compression Threshold (bytes)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>