RouteLogic-v4.0.0/force-app/main/default/objects/AI_Processing_Config__mdt/fields/Default_Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>Default_Batch_Size__c</fullName>
    <defaultValue>200</defaultValue>
    <description>Default batch size for AI processing</description>
    <label>Default Batch Size</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>