RouteLogic-v4.0.0/force-app/main/default/objects/AI_Processing_Config__mdt/fields/Enable_IP_Anonymization__c.field-meta.xml
<CustomField>
    <fullName>Enable_IP_Anonymization__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable IP address anonymization in audit logs for privacy compliance</description>
    <label>Enable IP Anonymization</label>
    <type>Checkbox</type>
</CustomField>