RouteLogic-v4.0.0/force-app/main/default/objects/AI_Processing_Config__mdt/fields/Enable_PII_Masking__c.field-meta.xml
<CustomField>
    <fullName>Enable_PII_Masking__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable PII masking in AI processing</description>
    <label>Enable PII Masking</label>
    <type>Checkbox</type>
</CustomField>