RouteLogic-v4.0.0/force-app/main/default/objects/AI_Processing_Config__mdt/fields/Enable_Request_Compression__c.field-meta.xml
<CustomField>
    <fullName>Enable_Request_Compression__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Enable gzip compression for large JSON requests</description>
    <label>Enable Request Compression</label>
    <type>Checkbox</type>
</CustomField>