RouteLogic-v4.0.0/force-app/main/default/objects/AI_Processing_Config__mdt/fields/Enable_Retention_Notifications__c.field-meta.xml
<CustomField>
    <fullName>Enable_Retention_Notifications__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Send notifications when log retention cleanup completes</description>
    <label>Enable Retention Notifications</label>
    <type>Checkbox</type>
</CustomField>