RouteLogic-v4.0.0/force-app/main/default/objects/AI_Processing_Config__mdt/fields/Error_Log_Retention_Days__c.field-meta.xml
<CustomField>
    <fullName>Error_Log_Retention_Days__c</fullName>
    <defaultValue>30</defaultValue>
    <description>Number of days to retain error logs before automatic deletion</description>
    <label>Error Log Retention Days</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>