RouteLogic-v4.0.0/force-app/main/default/objects/AI_Processing_Config__mdt/fields/Max_Concurrent_Jobs__c.field-meta.xml
<CustomField>
    <fullName>Max_Concurrent_Jobs__c</fullName>
    <defaultValue>5</defaultValue>
    <description>Maximum number of concurrent processing jobs</description>
    <label>Max Concurrent Jobs</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>