RouteLogic-v4.0.0/force-app/main/default/objects/AI_Processing_Config__mdt/fields/Max_Rate_Limit_Retries__c.field-meta.xml
<CustomField>
    <fullName>Max_Rate_Limit_Retries__c</fullName>
    <defaultValue>3</defaultValue>
    <description>Maximum retries for rate limit (429) responses</description>
    <label>Max Rate Limit Retries</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>