RouteLogic-v4.0.0/force-app/main/default/objects/AI_Processing_Config__mdt/fields/Max_Retry_Attempts__c.field-meta.xml
<CustomField>
    <fullName>Max_Retry_Attempts__c</fullName>
    <defaultValue>3</defaultValue>
    <description>Maximum number of retry attempts for failed requests</description>
    <label>Max Retry Attempts</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>