RouteLogic-v4.0.0/force-app/main/default/objects/AI_Processing_Config__mdt/fields/PII_Masking_Regions__c.field-meta.xml
<CustomField>
    <fullName>PII_Masking_Regions__c</fullName>
    <description>Comma-separated list of regions where PII masking is required (e.g., EU,CA,UK)</description>
    <label>PII Masking Regions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>