RouteLogic-v4.0.0/force-app/main/default/objects/AI_Processing_Config__mdt/fields/Rate_Limit_TTL_Seconds__c.field-meta.xml
<CustomField>
    <fullName>Rate_Limit_TTL_Seconds__c</fullName>
    <defaultValue>3600</defaultValue>
    <description>Rate limit cache time-to-live in seconds</description>
    <label>Rate Limit TTL (seconds)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>