RouteLogic-v4.0.0/force-app/main/default/objects/AI_Processing_Config__mdt/fields/Retry_Delay_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Retry_Delay_Minutes__c</fullName>
    <defaultValue>5</defaultValue>
    <description>Delay in minutes before retrying failed requests</description>
    <label>Retry Delay Minutes</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>